fix/shift-only-top-metric-value-left

--- a/static/editor/css/pdf_template_b.css
+++ b/static/editor/css/pdf_template_b.css
@@ -717,7 +717,7 @@
 
 .field-p5-coverage-mean {
     top: 191.10mm;
-    left: 153.99mm !important;
+    left: 153.20mm !important;
     width: 20.00mm;
     height: 5.05mm;
 }
